--- a/Settings/UppercuT.config
+++ b/Settings/UppercuT.config
@@ -25,21 +25,21 @@
 
   <!-- FRAMEWORKS -->
   <!-- microsoft.framework: vb6, net-1.0, net-1.1, net-2.0, net-3.5, net-4.0, netcf-1.0, netcf-2.0, silverlight-2.0, mono-1.0, mono-2.0, mono-3.5, moonlight-2.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
-  <property name="microsoft.framework" value="net-3.5" overwrite="false" />
+  <property name="microsoft.framework" value="net-4.0" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
-  <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
+  <!-- test.framework: none, mbunit2, nunit, xunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="mbunit2" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="svn" overwrite="false" />
   
-  <!-- Environment spesific variables -->
+  <!-- Environment specific variables -->
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
   
   <!-- ASSEMBLY VARIABLES -->
   <property name="version.use_semanticversioning" value="false" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
-  <property name="version.minor" value="7" overwrite="false" />
+  <property name="version.minor" value="8" overwrite="false" />
   <property name="version.patch" value="0" overwrite="false" />
   <property name="version.gem.suffix" value="" overwrite="false" />
   <property name="use.gem.build_date" value="false" overwrite="false" />
@@ -54,12 +54,12 @@
   <property name="obfuscate" value="false" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
-  <property name="msbuild.configuration" value="Build" overwrite="false" />
+  <property name="msbuild.configuration" value="Release" overwrite="false" />
   <property name="msbuild.platform" value="Any CPU" overwrite="false" />
   <!-- Mixed Platforms is the default 4.0 build platform -->
   <!--property name="msbuild.platform" value="Mixed Platforms" overwrite="false" /-->
   <!-- This setting allows you to use your own output path by setting to false - this does not work in conjuction with multitargeting -->
-  <property name="msbuild.override_output_path" value="false" overwrite="false" />
+  <property name="msbuild.override_output_path" value="true" overwrite="false" />
 
   <!-- POLICIES -->
   <property name="file.installation_document" value="..${path.separator}${folder.documentation}${path.separator}Installation${path.separator}${project.name}Installation.doc" overwrite="false" />
@@ -70,11 +70,13 @@
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
   <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" />
+  <property name="app.xunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}xUnit${path.separator}xunit.console.clr4.exe" overwrite="false" />
   <property name="app.storevil.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}StorEvil${path.separator}StorEvil.exe" overwrite="false" />
   <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
   <property name="app.ncover_explorer" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCoverExplorer.Console.exe" overwrite="false" />
   <property name="app.ncover.tester" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MbUnit2${path.separator}MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
   <property name="app.ncover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.ncover.tester" value="${app.xunit.console}" overwrite="false" if="${test.framework=='xunit'}" />
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
   <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
