--- a/nuget/roundhouse.nuspec
+++ b/nuget/roundhouse.nuspec
@@ -1,19 +1,20 @@
 <?xml version="1.0"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
-    <id>__REPLACE__</id>
-    <version>DO_NOT_EDIT</version>
-    <authors>__REPLACE__</authors>
-    <owners>__REPLACE__</owners>
-    <summary>__REPLACE__</summary>
-    <description>__REPLACE__</description>
-    <!--<projectUrl>__REPLACE__</projectUrl>
-    <licenseUrl>__REPLACE__</licenseUrl>
+    <id>roundhouse</id>
+    <title>RoundhousE</title>
+    <version>0.7.0.282</version>
+    <authors>Rob Reynolds</authors>
+    <owners>Rob Reynolds</owners>
+    <summary>RoundhousE - Professional Database Change and Versioning Management</summary>
+    <description>RoundhousE is a Professional Database Change and Versioning Management tool. Type rh /? for options</description>
+    <projectUrl>http://projectroundhouse.org</projectUrl>
+    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <tags>space delimited</tags>
-    <iconUrl>32x32.png</iconUrl>
+    <tags>roundhouse db migrations chocolatey chucknorris</tags>
+    <iconUrl>http://roundhouse.googlecode.com/svn/trunk/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
     <dependencies>
-      <dependency id="something" version="1.0.0.0" />
-    </dependencies>-->
+      <dependency id="log4net" version="1.2.10" />
+    </dependencies>
   </metadata>
 </package>
