Splitting up the nuget and adding more items to it.

--- a/nuget/roundhouse.msbuild/roundhouse.msbuild.nuspec
+++ b/nuget/roundhouse.msbuild/roundhouse.msbuild.nuspec
@@ -1,17 +1,17 @@
 <?xml version="1.0"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
-    <id>roundhouse</id>
-    <title>RoundhousE</title>
+    <id>roundhouse.msbuild</id>
+    <title>RoundhousE MsBuild</title>
     <version>0.7.0.282</version>
     <authors>Rob Reynolds</authors>
     <owners>Rob Reynolds</owners>
     <summary>RoundhousE - Professional Database Change and Versioning Management</summary>
-    <description>RoundhousE is a Professional Database Change and Versioning Management tool. Type rh /? for options</description>
+    <description>RoundhousE is a Professional Database Change and Versioning Management tool. This is to bring roundhouse msbuild tasks to your msbuild.</description>
     <projectUrl>http://projectroundhouse.org</projectUrl>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <tags>roundhouse db migrations chocolatey chucknorris</tags>
+    <tags>roundhouse db migrations msbuild chucknorris</tags>
     <iconUrl>http://roundhouse.googlecode.com/svn/trunk/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
     <dependencies>
       <dependency id="log4net" version="1.2.10" />
