reworked the traversal; actions are still too big, but approch is much better

--- a/product/roundhouse/roundhouse.csproj
+++ b/product/roundhouse/roundhouse.csproj
@@ -188,6 +188,7 @@
     <Compile Include="databases\SqlServerLiteSpeedDatabase.cs" />
     <Compile Include="traversal\FileSystemTraversal.cs" />
     <Compile Include="traversal\ITraversal.cs" />
+    <Compile Include="traversal\TraversalConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="infrastructure.app\logging\log4net.config.xml" />
