--- a/sample/BuildDatabase/packages.config
+++ b/sample/BuildDatabase/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="1.2.10" />
+  <package id="Iesi.Collections" version="3.1.0.4000" />
+  <package id="NHibernate" version="3.1.0.4000" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="FluentNHibernate" version="1.2.0.712" />
   <package id="roundhouse.lib" version="0.8.0.305" />
   <package id="roundhouse.refreshdatabase" version="0.8.0.305" />
 </packages>
