initial work for sqlite

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -10,4 +10,5 @@
   <repository path="..\product\roundhouse.databases.sqlserver\packages.config" />
   <repository path="..\product\roundhouse.databases.mysql\packages.config" />
   <repository path="..\product\roundhouse.databases.oracle\packages.config" />
+  <repository path="..\product\roundhouse.databases.sqlite\packages.config" />
 </repositories>
