--- a/product/roundhouse/packages.config
+++ b/product/roundhouse/packages.config
@@ -7,4 +7,5 @@
   <package id="NHibernate" version="3.1.0.4000" />
   <package id="NHibernate.Castle" version="3.1.0.4000" />
   <package id="PublishedApplications" version="1.0.0.0" />
+  <package id="structuremap" version="2.6.3" />
 </packages>
