--- a/product/roundhouse.databases.mysql/packages.config
+++ b/product/roundhouse.databases.mysql/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
-  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
 </packages>
