--- a/product/roundhouse.databases.sqlite/packages.config
+++ b/product/roundhouse.databases.sqlite/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
-  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
   <package id="System.Data.SQLite" version="1.0.75.0" />
 </packages>
