--- a/product/roundhouse.tests.integration/packages.config
+++ b/product/roundhouse.tests.integration/packages.config
@@ -3,6 +3,6 @@
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="log4net" version="1.2.10" />
-  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
   <package id="RhinoMocks" version="3.6" />
 </packages>
